sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:8: error: not found: value nbEchange
        nbEchange = nbEchange+1
        ^